--- a/src/index.css
+++ b/src/index.css
@@ -29,15 +29,21 @@ body {
   display: flex;
   min-width: 320px;
   height: 100vh;
-  background-color: #ffffff;
+  background-color: #ffd700;;
 }
 
 h1 {
   font-size: 3.2em;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.1;
-  color: dimgrey;
+  color: rgb(0, 0, 0);
   padding: 2rem;
+}
+
+h3{
+color: #000000;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 button {
